fixed all warnings

--- a/static/styles/account/settings.scss
+++ b/static/styles/account/settings.scss
@@ -1,5 +1,5 @@
 @import "../lib/colors";
-@import '../lib/bootstrap/scss/bootstrap-flex';
+@import "../lib/bootstrap/scss/bootstrap-flex";
 
 .notification-div {
   padding-top: 20px;
