--- a/static/styles/about/about.scss
+++ b/static/styles/about/about.scss
@@ -2,13 +2,14 @@
 
 .section-about {
   hgroup {
-    margin: 60px 0 60px;
+    margin: 60px 0;
     width: 100%;
     text-align: center;
     font-weight: bold;
   }
 
   .section-title {
+    display: border-box;
     padding: 10px 0 20px;
     width: 100%;
     line-height: 1.75rem;
@@ -31,8 +32,9 @@
   .single-pdf {
     margin: 0 15px 15px;
     border: 1px solid #d3d3d3;
-    box-shadow: 2px 2px 5px rgba(0,0,0,.1);
-    padding: 3px 6px 3px 6px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, .1);
+    padding: 3px 6px;
+
     &.opened {
       border: 1px solid #b10438;
     }
