--- a/static/styles/calendar/calendar.scss
+++ b/static/styles/calendar/calendar.scss
@@ -1,125 +1,124 @@
 @import "../lib/colors";
 
 .route-calendar {
-    .fullcalendar {
-        float: left;
-        width: 100%;
+  .fullcalendar {
+    float: left;
+    width: 100%;
 
-        h2 {
-            line-height: 30px;
-            font-size: 20px;
-            font-weight: 800;
+    h2 {
+      line-height: 30px;
+      font-size: 20px;
+      font-weight: 800;
+    }
+
+    .fc-event {
+      border: 0;
+      background: #e9e9e9;
+      color: #646464;
+
+      .fc-content {
+        padding: 5px;
+
+        .fc-title {
+          font-weight: 600;
         }
+      }
 
-        .fc-event {
-            border: 0;
-            background: #e9e9e9;
-            color: #646464;
+      &.fc-event-cancelled {
+        background: #f5f5f5;
+        color: #a9a9a9;
+      }
 
-            .fc-content {
-                padding: 5px;
+      &:not(.fc-event-cancelled):hover {
+        background: #ddd;
+      }
 
-                .fc-title {
-                    font-weight: 600;
-                }
-            }
+      &.fc-time-grid-event {
+        border-top: 6px solid $accentColor;
+        border-bottom: 6px solid transparent;
 
-            &.fc-event-cancelled {
-                background: #f5f5f5;
-                color: #a9a9a9;
-            }
+        &.fc-event-cancelled {
+          border-top: 6px solid transparent;
+          border-bottom: 6px solid $primaryColor;
 
-            &:not(.fc-event-cancelled):hover {
-                background: #ddd;
-            }
-
-            &.fc-time-grid-event {
-                border-top: 6px solid $accentColor;
-                border-bottom: 6px solid transparent;
-
-                &.fc-event-cancelled {
-                    border-top: 6px solid transparent;
-                    border-bottom: 6px solid $primaryColor;
-
-                    &:after {
-                        position: absolute;
-                        right: 10px;
-                        bottom: 5px;
-                        color: $primaryColor;
-                        font-weight: 600;
-                        content: attr(data-status);
-                    }
-                }
-            }
+          &:after {
+            position: absolute;
+            right: 10px;
+            bottom: 5px;
+            color: $primaryColor;
+            font-weight: 600;
+            content: attr(data-status);
+          }
         }
+      }
     }
+  }
 
-    .fc-state-default {
-        border-color: #ccc;
-        box-shadow: none;
-        background: #fff;
-        text-shadow: none;
-        color: #292b2c;
-    }
+  .fc-state-default {
+    border-color: #ccc;
+    box-shadow: none;
+    background: #fff;
+    text-shadow: none;
+    color: #292b2c;
+  }
 
-    .fc-state-hover,
-    .fc-state-down,
-    .fc-state-active,
-    .fc-state-disabled {
-        background-color: #e6e6e6;
-        color: #292b2c;
-    }
+  .fc-state-hover,
+  .fc-state-down,
+  .fc-state-active,
+  .fc-state-disabled {
+    background-color: #e6e6e6;
+    color: #292b2c;
+  }
 
-    .fc-state-hover {
-        transition: none;
-        background: #e6e6e6;
-        color: #292b2c;
-        -o-transition: background-position 0.1s linear;
-        -moz-transition: background-position 0.1s linear;
-        -webkit-transition: background-position 0.1s linear;
-    }
+  .fc-state-hover {
+    transition: background-position .1s linear;
+    background: #e6e6e6;
+    color: #292b2c;
+  }
 
-    .fc-state-down,
-    .fc-state-active {
-        border-color: #adadad;
-        background: #e6e6e6;
-        color: #292b2c;
-    }
+  .fc-state-down,
+  .fc-state-active {
+    border-color: #adadad;
+    background: #e6e6e6;
+    color: #292b2c;
+  }
 
-    .fc-state-disabled {
-        opacity: 1;
-        border-color: #ccc;
-        box-shadow: none;
-        background: #fff;
-        cursor: default;
-    }
+  .fc-state-disabled {
+    opacity: 1;
+    border-color: #ccc;
+    box-shadow: none;
+    background: #fff;
+    cursor: default;
+  }
 }
 
 .create-course-event {
+  label {
+    margin-right: .5rem;
+  }
+
+  .toggle {
+    width: 7rem !important;
+    height: 2rem !important;
+
+    .toggle-handle {
+      background: #f5f5f5 !important;
+      width: .3rem !important;
+    }
+  }
+
+  .off {
+    background: #808080 !important;
+
     label {
-        margin-right: 0.5rem;
+      padding-left: 48px !important;
+      color: #f5f5f5 !important;
     }
+  }
 
-    .toggle {
-        width: 7rem !important;
-        height: 2rem !important;
-        .toggle-handle {
-            background: #f5f5f5 !important;
-            width: 0.3rem !important;
-        }
+  .on {
+    label {
+      padding-right: 48px !important;
     }
-
-    .off {
-        background: #808080 !important;
-        label {
-            padding-left: 48px !important;
-            color: #f5f5f5 !important;
-        }
-    }
-
-    .on {
-        label {
-            padding-right: 48px !important;
-        }
-    }
+  }
 }
