--- a/static/styles/dashboard/dashboard.scss
+++ b/static/styles/dashboard/dashboard.scss
@@ -1,222 +1,223 @@
 @import "../lib/colors";
-@import '../lib/bootstrap/scss/bootstrap-flex';
-@import '../homework/homework';
+@import "../lib/bootstrap/scss/bootstrap-flex";
+@import "../homework/homework";
 
 @include media-breakpoint-down(xs) {
-    .row.lesson-cards,
-    .row.messages,
-    .row.notices,
-    .row.buttons,
-    .row.articles {
-        margin: 5px -15px;
-    }
 
-    .row.timeline {
-        display: none;
-    }
+  .row.lesson-cards,
+  .row.messages,
+  .row.notices,
+  .row.buttons,
+  .row.articles {
+    margin: 5px -15px;
+  }
 
-    .timetable {
-        border-top: zero;
-    }
+  .row.timeline {
+    display: none;
+  }
 
-    .timetable .row.lesson-cards {
-        height: auto;
-    }
+  .timetable {
+    border-top: zero;
+  }
 
-    .timetable .row.lesson-cards .lesson-card {
-        position: relative !important;
-        left: 0 !important;
-        padding: 10px 0;
-        width: 100% !important;
-    }
+  .timetable .row.lesson-cards {
+    height: auto;
+  }
+
+  .timetable .row.lesson-cards .lesson-card {
+    position: relative !important;
+    left: 0 !important;
+    padding: 10px 0;
+    width: 100% !important;
+  }
 }
 
 @include media-breakpoint-down(md) {
-    .sc-card-wrapper:nth-child(n+4) {
-        display: none;  
-    }
+  .sc-card-wrapper:nth-child(n+4) {
+    display: none;
+  }
 }
 
 @include media-breakpoint-down(lg) {
-    .sc-card-wrapper:nth-child(n+4) {
-        display: none;  
-    }
+  .sc-card-wrapper:nth-child(n+4) {
+    display: none;
+  }
 }
 
 @include media-breakpoint-down(xl) {
-    .sc-card-wrapper:nth-child(n+5) {
-        display: none;  
-    }
+  .sc-card-wrapper:nth-child(n+5) {
+    display: none;
+  }
 }
 
-.section{
-    clear: both;
+.section {
+  clear: both;
 }
 
 .section-timetable {
+  float: left;
+  padding-top: 15px;
+  width: 100%;
+  line-height: 1.75rem;
+
+  @include media-breakpoint-down(xs) {
+    display: none;
+  }
+
+  h5 {
     float: left;
-    padding-top: 15px;
-    width: 100%;
-    line-height: 1.75rem;
+  }
 
-    @include media-breakpoint-down(xs) {
-        display: none;
-    }
-
-    h5 {
-        float: left;
-    }
-
-    .selected-date {
-        float: right;
-        line-height: 22px;
-        color: #969696;
-    }
+  .selected-date {
+    float: right;
+    line-height: 22px;
+    color: #969696;
+  }
 }
 
 
 .timetable {
-    float: left;
-    border-top: 1px solid #c8c8c8;
-    padding: 0 15px 0;
-    width: 100%;
-    line-height: 1.75rem;
+  float: left;
+  border-top: 1px solid #c8c8c8;
+  padding: 0 15px;
+  width: 100%;
+  line-height: 1.75rem;
 
-    .lesson-cards {
-        position: relative;
-        margin-top: 40px;
-        margin-bottom: 30px;
+  .lesson-cards {
+    position: relative;
+    margin-top: 40px;
+    margin-bottom: 30px;
+    height: 170px;
+
+    .lesson-card {
+      position: absolute;
+      top: 0;
+      padding: 0 1px;
+      text-decoration: none !important;
+
+      .card-block {
+        padding: .5rem;
+      }
+
+      .card {
+        border: 0;
+        border-top: 6px solid $accentColor;
+        border-bottom: 6px solid transparent;
+        background: #e9e9e9;
         height: 170px;
+        color: #646464;
 
-        .lesson-card {
-            position: absolute;
-            top: 0;
-            padding: 0 1px;
-            text-decoration: none !important;
-
-            .card-block {
-                padding: 0.5rem;
-            }
-
-            .card {
-                border: 0;
-                border-top: 6px solid $accentColor;
-                border-bottom: 6px solid transparent;
-                background: #e9e9e9;
-                height: 170px;
-                color: #646464;
-
-                &:not(.disabled):hover {
-                    background: #ddd;
-                }
-
-
-                .card-title {
-                    font-size: 1.063rem;
-                    font-weight: 600;
-                }
-
-                .card-text{
-                    line-height: 130%;
-                }
-
-                .lesson-time {
-                    display: block;
-                    margin-top: -15px;
-                    margin-bottom: 0;
-                    font-size: 0.75rem;
-                }
-
-                &.disabled {
-                    border-top: 6px solid transparent;
-                    border-bottom: 6px solid $primaryColor;
-                    background: #f5f5f5;
-                    color: #a9a9a9;
-
-                    &:after {
-                        position: absolute;
-                        right: 10px;
-                        bottom: 5px;
-                        color: $primaryColor;
-                        font-weight: 600;
-                        content: attr(data-status);
-                    }
-                }
-            }
+        &:not(.disabled):hover {
+          background: #ddd;
         }
+
+
+        .card-title {
+          font-size: 1.063rem;
+          font-weight: 600;
+        }
+
+        .card-text {
+          line-height: 130%;
+        }
+
+        .lesson-time {
+          display: block;
+          margin-top: -15px;
+          margin-bottom: 0;
+          font-size: .75rem;
+        }
+
+        &.disabled {
+          border-top: 6px solid transparent;
+          border-bottom: 6px solid $primaryColor;
+          background: #f5f5f5;
+          color: #a9a9a9;
+
+          &:after {
+            position: absolute;
+            right: 10px;
+            bottom: 5px;
+            color: $primaryColor;
+            font-weight: 600;
+            content: attr(data-status);
+          }
+        }
+      }
+    }
+  }
+
+  .timeline {
+    position: relative;
+    float: left;
+    margin-top: 3px;
+    margin-bottom: 20px;
+    border-top: 1px solid #c8c8c8;
+    width: 100%;
+
+    .current-time {
+      display: block;
+      position: absolute;
+      top: -3px;
+      left: 0;
+      background: #696969;
+      width: 100px;
+      height: 3px;
+
+      &:before {
+        position: absolute;
+        right: 1px;
+        bottom: 0;
+        background: $primaryColor;
+        width: 2px;
+        height: 245px;
+        content: "";
+      }
+
+      span {
+        display: block;
+        position: absolute;
+        top: -28px;
+        right: -15px;
+        z-index: 2;
+        background: #fff;
+        padding: 0 5px;
+        color: $primaryColor;
+        font-size: 10px;
+      }
     }
 
-    .timeline {
-        position: relative;
-        float: left;
-        margin-top: 3px;
-        margin-bottom: 20px;
-        border-top: 1px solid #c8c8c8;
-        width: 100%;
-
-        .current-time {
-            display: block;
-            position: absolute;
-            top: -3px;
-            left: 0;
-            background: #696969;
-            width: 100px;
-            height: 3px;
-
-            &:before {
-                position: absolute;
-                right: 1px;
-                bottom: 0;
-                background: $primaryColor;
-                width: 2px;
-                height: 245px;
-                content: '';
-            }
-
-            span {
-                display: block;
-                position: absolute;
-                top: -28px;
-                right: -15px;
-                z-index: 2;
-                background: #fff;
-                padding: 0 5px;
-                color: $primaryColor;
-                font-size: 10px;
-            }
-        }
-
-        .tick {
-            color: #aaa;
-            font-size: 10px;
-        }
-
-        .timelines{
-            display: block;
-            position: absolute;
-            top: -3px;
-            left: 0;
-            background: #696969;
-            width: 100px;
-            height: 3px;
-
-            &:before {
-                position: absolute;
-                right: 0;
-                bottom: 0;
-                z-index: -1;
-                border-left: 1px dashed #ccc;
-                width: 1px;
-                height: 245px;
-                content: '';
-            }
-        }
+    .tick {
+      color: #aaa;
+      font-size: 10px;
     }
+
+    .timelines {
+      display: block;
+      position: absolute;
+      top: -3px;
+      left: 0;
+      background: #696969;
+      width: 100px;
+      height: 3px;
+
+      &:before {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        z-index: -1;
+        border-left: 1px dashed #ccc;
+        width: 1px;
+        height: 245px;
+        content: "";
+      }
+    }
+  }
 }
 
 .poll {
-    padding-top: 8px;
-    padding-right: 8px;
-    padding-left: 8px;
-    text-align: center;
+  padding-top: 8px;
+  padding-right: 8px;
+  padding-left: 8px;
+  text-align: center;
 }
