--- a/static/styles/files/upload.scss
+++ b/static/styles/files/upload.scss
@@ -44,11 +44,10 @@
       margin-top: 10px;
       margin-bottom: -4px;
       border-radius: 5px;
-      box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+      box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1);
       background-color: #f5f5f5;
       width: 100%;
       height: 30px;
-      -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
 
       .percent {
         position: absolute;
